Updated ??/??/2007 - Version 1.98

  By popular request (and possibly to test Requirements at some point
  in a future patch) added Champion Level and Realm Rank to templates.

  EA Mythic US server ini file numbers now clash with Euro/GOA server
  ini file numbers, so US players saw the wrong server name for their
  characters.  Added a new Option to show Euro/GOA servers.

  When loading a classic template, don't throw away either the drop
  or crafted 'empty item' just because they have no slots filled in.
  Users -expect- to see an empty item waiting for them, it was there
  when they saved it.  We still collapse the empty drop or crafted
  item when an item, alone, is loaded.

Updated 01/30/2007 - Version 1.97

  Export Gems fixes: don't die looking for made gems, set the crafted
  gems to marked (but not checked), update the next quickbar slot
  after exporting, and disable the export button when there is no
  crafter or no gems chosen to export.  This makes it easier to see
  when gems are successfully exported.

  Changed the description from "Hide 'done' gems" to "Hide 'made' gems".

  Item renaming now works properly again (signal name broken in 1.96).

Updated 1/25/2007 - Version 1.96 - Patch 1.87 SC Overhaul

  Removed Quality factor entirely from gems.

  Removed Crafting Time tracking from gems.

  Change the concept of tracking 'remakes' to tracking 'makes',
  where zero makes is costed as if it will be one make, and one 
  or more makes are the actual number of gems that were imbued
  (replaced one-by-one as the crafter goes Kaboom.)

  Removed 'expected multiplier' because the SC'er doesn't know
  exactly when they will go Kaboom, and will replace only one
  gem if they plan ahead.  Imbued three with no overcharge, and
  hold off the overcharge gem so only one gem explodes if any

  Hide acuity-type stats that don't apply to the class if the stat
  has no bonus and display "ACU" for classes with no acuity stat
  when there is a useless bonus.
