@@ -1,5 +1,7 @@
 Updated ??/??/2007 - Version 1.98
 
+  Added Enhanced Shield and Harp to the new item, item type menus.
+
   By popular request (and possibly to test Requirements at some point
   in a future patch) added Champion Level and Realm Rank to templates.
 
